Makefiles simplified now gSOAP included in steering library.

--- a/examples/mini_app_f90/Makefile
+++ b/examples/mini_app_f90/Makefile
@@ -46,8 +46,7 @@ TARGET   = mini_app2
 
 ${TARGET}: ${TARGET}.o ${REG_STEER_HOME}/include/reg_steer_f90.inc
 	${F90} ${F90_FLAGS} ${TARGET}.o -o $@ ${STEER_LIBS} ${GLOBUS_LDFLAGS} \
-	${SOAP_LDFLAGS} -lReG_Steer -lz -lxml2 ${GLOBUS_PKG_LIBS} \
-	${SOAP_PKG_LIBS}
+	-lReG_Steer -lz -lxml2 ${GLOBUS_PKG_LIBS}
 	mv ${TARGET} ${LOCAL_BIN_DIR}/.
 
 mini_app2.o: mini_app2.f90
