--- a/Makefile.include
+++ b/Makefile.include
@@ -38,20 +38,16 @@
 # Architecture of this platform.  Choose the most appropriate from
 # those listed in the src/conf directory. Make sure you don't leave
 # any SPACES at the end of this line!
-ARCH = LINUX
+ARCH = SGI64
 # Edit the two following lines if 32-bit binaries are desired 
 # (NBIT = 32 and C_FLAGS=-n32).
-NBIT = 32
-CC = gcc
-C_FLAGS = ${CFLAGS} -g
-CXX = g++
-CXX_FLAGS = ${CFLAGS} -g
-F90 =
-F90_FLAGS = -g
+NBIT = 64
+CC = cc
+C_FLAGS = ${CFLAGS} -64 -g
+F90 = f90
+F90_FLAGS = -64 -g
 # Location of java compiler - used to produce proxy binary
-JAVAC =
-# Java needed for production of SOAP stubs
-JAVA = java 
+JAVAC          = 
 # Location of the M4 macro processor (used to generate F90 wrappers)
 M4 = m4
 # Location of the archive command
@@ -61,6 +57,7 @@ AR_FLAGS = rv
 # Directory to put executables in (mini_app, mini_steerer etc.)
 LOCAL_BIN_DIR  = ${HOME}/bin
 
+
 STEER_INCLUDES = -I${REG_STEER_HOME}/include \
                  -I${REG_XML_INCDIR}
 
@@ -68,31 +65,33 @@ STEER_INCLUDES = -I${REG_STEER_HOME}/include \
 # the contents of REG_XML_LIBDIR (e.g. linux boxes that only have 
 # /usr/local/lib rather than /usr/local/lib32, say).
 STEER_LIBS = -L${REG_STEER_HOME}/lib$(NBIT) \
-             -L${REG_XML_LIBDIR}
+             -L${REG_XML_LIBDIR}$(NBIT)
 
-# The globus_definitions file can be generated using the following globus command
-#  globus-makefile-header globus_io globus_common -flavor=gcc32dbg > globus_defintions
-# subsititue flavor appropriately for your globus installation but use only non-threaded flavour
 
-GLOBUS_INCLUDES=
-GLOBUS_PKG_LIBS=
-GLOBUS_LDFLAGS=
+# The globus_definitions file can be generated using the following 
+# globus command:
+# globus-makefile-header -flavor=gcc32dbg globus_io globus_common > globus_defintions
+# Subsititue flavor (sic) as appropriate for your globus installation 
+# but use only non-threaded flavours.
+
+GLOBUS_INCLUDES = -I/usr/local/globus2/include/vendorcc${NBIT}dbg
+GLOBUS_PKG_LIBS = -lglobus_io_vendorcc${NBIT}dbg \
+                  -lglobus_common_vendorcc${NBIT}dbg \
+                  -lglobus_gss_assist_vendorcc${NBIT}dbg \
+                  -lglobus_gssapi_gsi_vendorcc${NBIT}dbg \
+                  -lssl_vendorcc${NBIT}dbg \
+                  -lcrypto_vendorcc${NBIT}dbg
+GLOBUS_LDFLAGS = -L/usr/local/globus2/lib
 
 # Either define GLOBUS_INCLUDES, GLOBUS_PKG_LIBS and GLOBUS_LDFLAGS, OR
 # uncomment this line if using Globus for sample AND/OR steering
 #include ${REG_STEER_HOME}/globus_definitions
 
 # Set flag to 1 to use globus for iotype samples communication, 0 to not 
-REG_GLOBUS_SAMPLES_FLAG = 0
+REG_GLOBUS_SAMPLES_FLAG = 1
 
 # Set flag to 1 to use globus for steering communication, 0 to not 
 REG_GLOBUS_STEERING_FLAG = 0
 
-
 # Set flag to 1 to use SOAP for steering communication, 0 to not 
 REG_SOAP_STEERING_FLAG = 1
-#SOAP_CLASS_PATH = ${CLASSPATH}:${HOME}/gsoap-linux-2.2.3/wsdlcpp
-#SOAPCPP2 = ${HOME}/gsoap-linux-2.2.3/soapcpp2
-#SOAP_INCLUDES = -I${HOME}/gsoap-linux-2.2.3
-#SOAP_PKG_LIBS = -lgsoap
-#SOAP_LDFLAGS = -L${HOME}/gsoap-linux-2.2.3
