--- a/examples/mini_app_f90_parallel/Makefile
+++ b/examples/mini_app_f90_parallel/Makefile
@@ -46,7 +46,7 @@ TARGET   = mini_app_para
 ${TARGET}: ${TARGET}.o ../../include/reg_steer_f90.inc
 	${F90} ${F90_FLAGS} ${TARGET}.o -o $@ ${STEER_LIBS} ${GLOBUS_LDFLAGS} \
 	-lmpi -lReG_Steer -lm -lz -lxml2 ${GLOBUS_PKG_LIBS} 
-	mv ${TARGET} ${HOME}/bin/.
+	mv ${TARGET} ${LOCAL_BIN_DIR}/.
 
 mini_app_para.o: mini_app_para.f90
 	${F90} ${F90_FLAGS} ${STEER_INCLUDES} ${GLOBUS_INCLUDES} -c $< -o $@
