Renamed DEBUG to REG_DEBUG to differentiate from soap library.  Added timing to ...Appside.c

--- a/src/Makefile
+++ b/src/Makefile
@@ -54,7 +54,7 @@ lib:
 	${CC} ${C_FLAGS} -DREG_GLOBUS_SAMPLES=${REG_GLOBUS_SAMPLES_FLAG} \
 	-DREG_GLOBUS_STEERING=${REG_GLOBUS_STEERING_FLAG} \
         -DREG_SOAP_STEERING=${REG_SOAP_STEERING_FLAG} \
-        -DDEBUG=${REG_DEBUG_FLAG} \
+        -DREG_DEBUG=${REG_DEBUG_FLAG} \
         ${INCLUDE_PATH} -c $< -o $@
 
 ${LIB_PATH}/libReG_Steer.a: ReG_Steer_Appside_f.o \
