Work on allowing more dynamic discovery of port and address to connect to for IOType connection - call to Consume_start now effectively polls SGS to see if necessary info. available yet.

--- a/src/Makefile
+++ b/src/Makefile
@@ -65,6 +65,7 @@ ${LIB_PATH}/libReG_Steer.a: ReG_Steer_Appside_f.o \
 	ReG_Steer_Appside_Globus.o \
         ReG_Steer_Steerside_Soap.o \
         ReG_Steer_Appside_Soap.o \
+        ReG_Steer_Appside_File.o \
 	stdsoap2.o soapC.o soapClient.o
 
 
@@ -77,6 +78,7 @@ ${LIB_PATH}/libReG_Steer.a:
 	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a ReG_Steer_XML.o
 	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a ReG_Steer_Appside_Globus.o
 	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a ReG_Steer_Appside_Soap.o
+	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a ReG_Steer_Appside_File.o
 	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a ReG_Steer_Steerside_Soap.o
 	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a stdsoap2.o
 	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a soapC.o
@@ -90,7 +92,8 @@ ReG_Steer_Appside.o: ReG_Steer_Appside.c \
 	 ../include/ReG_Steer_Appside_internal.h \
 	 ../include/ReG_Steer_Common.h \
 	 ../include/ReG_Steer_Appside_Globus.h \
-         ../include/ReG_Steer_Appside_Soap.h
+         ../include/ReG_Steer_Appside_Soap.h \
+         ../include/ReG_Steer_Appside_File.h
 
 ReG_Steer_Steerside.o: ReG_Steer_Steerside.c \
          ReG_Steer_Proxy_utils.c \
@@ -138,6 +141,11 @@ ReG_Steer_Appside_Soap.o: ReG_Steer_Appside_Soap.c \
         ../include/soapSGS.nsmap \
         ../include/soapH.h \
 	stdsoap2.c soapC.c soapClient.c
+
+ReG_Steer_Appside_File.o: ReG_Steer_Appside_File.c \
+        ../include/ReG_Steer_Appside_File.h \
+        ../include/ReG_Steer_Appside_internal.h \
+	../include/ReG_Steer_types.h
 
 ReG_Steer_Steerside_Soap.o: ReG_Steer_Steerside_Soap.c \
         ../include/ReG_Steer_Steerside_Soap.h \
