Added defines and files and so on to support the new sockets stuff...

--- a/Makefile.include
+++ b/Makefile.include
@@ -38,16 +38,16 @@
 # Architecture of this platform.  Choose the most appropriate from
 # those listed in the src/conf directory. Make sure you don't leave
 # any SPACES at the end of this line!
-ARCH = SGI64
+ARCH = LINUX
 # Edit the two following lines if 32-bit binaries are desired 
 # (NBIT = 32 and C_FLAGS=-n32).
-NBIT = 64
-CC = cc
-C_FLAGS = -O2 -64
+NBIT = 32
+CC = gcc
+C_FLAGS = -O2 -g
 F90 = f90
 F90_FLAGS = -O2 -64
 # Location of java compiler - used to produce proxy binary
-JAVAC          = 
+JAVAC          = /usr/bin/javac
 # Location of the M4 macro processor (used to generate F90 wrappers)
 M4 = m4
 # Location of the archive command
@@ -74,17 +74,17 @@ STEER_LIBS = -L${REG_STEER_HOME}/lib$(NBIT) \
 # Subsititue flavor (sic) as appropriate for your globus installation 
 # but use only non-threaded flavours.
 
-#GLOBUS_INCLUDES = -I/usr/local/globus2/include/vendorcc${NBIT}dbg
-#GLOBUS_PKG_LIBS = -lglobus_io_vendorcc${NBIT}dbg \
-#                  -lglobus_common_vendorcc${NBIT}dbg \
-#                  -lglobus_gss_assist_vendorcc${NBIT}dbg \
-#                  -lglobus_gssapi_gsi_vendorcc${NBIT}dbg \
-#                  -lssl_vendorcc${NBIT}dbg \
-#                  -lcrypto_vendorcc${NBIT}dbg 
-#GLOBUS_LDFLAGS = -L/usr/local/globus2/lib
-GLOBUS_INCLUDES = 
-GLOBUS_PKG_LIBS = 
-GLOBUS_LDFLAGS = 
+GLOBUS_INCLUDES = -I/usr/local/globus/include/gcc${NBIT}dbg
+GLOBUS_PKG_LIBS = -lglobus_io_gcc${NBIT}dbg \
+                  -lglobus_common_gcc${NBIT}dbg \
+                  -lglobus_gss_assist_gcc${NBIT}dbg \
+                  -lglobus_gssapi_gsi_gcc${NBIT}dbg \
+                  -lssl_gcc${NBIT}dbg \
+                  -lcrypto_gcc${NBIT}dbg 
+GLOBUS_LDFLAGS = -L/usr/local/globus/lib
+#GLOBUS_INCLUDES = 
+#GLOBUS_PKG_LIBS = 
+#GLOBUS_LDFLAGS = 
 
 # Either define GLOBUS_INCLUDES, GLOBUS_PKG_LIBS and GLOBUS_LDFLAGS, OR
 # uncomment this line if using Globus for sample AND/OR steering
@@ -93,8 +93,11 @@ GLOBUS_LDFLAGS =
 # Set flag to 1 to use globus for iotype samples communication, 0 to not 
 REG_GLOBUS_SAMPLES_FLAG = 0
 
+# Set flag to 1 to use sockets for iotype samples communication, 0 to not 
+REG_SOCKET_SAMPLES_FLAG = 1
+
 # Set flag to 1 to use SOAP for steering communication, 0 to not 
-REG_SOAP_STEERING_FLAG = 0
+REG_SOAP_STEERING_FLAG = 1
 
 # Set flag to 1 to get (a lot of) debug output, 0 otherwise.
 REG_DEBUG_FLAG = 0
