--- a/Makefile.include
+++ b/Makefile.include
@@ -39,13 +39,17 @@
 # those listed in the src/conf directory. Make sure you don't leave
 # any SPACES at the end of this line!
 ARCH = LINUX
-# Edit the two following lines if 32-bit binaries are desired 
-# (NBIT = 32 and C_FLAGS=-n32).
+# Edit the two following lines to switch between 32/64-bit binaries 
+# (NBIT = 32 or 64 and:
+#       C_FLAGS=-n32 or -64 with SGI compilers;
+#       C_FLAGS=-mabi=n32 or 64 with gcc).
 NBIT = 32
+# Location of C compiler and flags to use
 CC = gcc
-C_FLAGS = -O2 -g
-F90 = f90
-F90_FLAGS = -O2 -64
+C_FLAGS = -O2
+# Location of F90 compiler (if any) and flags to use
+F90 = 
+F90_FLAGS = 
 # Location of java compiler - used to produce proxy binary
 JAVAC          = /usr/bin/javac
 # Location of the M4 macro processor (used to generate F90 wrappers)
@@ -57,7 +61,6 @@ AR_FLAGS = rv
 # Directory to put executables in (mini_app, mini_steerer etc.)
 LOCAL_BIN_DIR  = ${HOME}/bin
 
-
 STEER_INCLUDES = -I${REG_STEER_HOME}/include \
                  -I${REG_XML_INCDIR}
 
@@ -67,6 +70,8 @@ STEER_INCLUDES = -I${REG_STEER_HOME}/include \
 STEER_LIBS = -L${REG_STEER_HOME}/lib$(NBIT) \
              -L${REG_XML_LIBDIR}$(NBIT)
 
+# Libraries to link example applications against
+STEER_LDFLAGS = -lm -lz
 
 # The globus_definitions file can be generated using the following 
 # globus command:
@@ -90,7 +95,6 @@ GLOBUS_LDFLAGS =
 # uncomment this line if using Globus for sample output/input.
 #include ${REG_STEER_HOME}/globus_definitions
 
-
 # Set flag to 1 to use globus for iotype samples communication, 0 to not 
 REG_GLOBUS_SAMPLES_FLAG = 0
 
@@ -101,4 +105,4 @@ REG_SOCKET_SAMPLES_FLAG = 1
 REG_SOAP_STEERING_FLAG = 1
 
 # Set flag to 1 to get (a lot of) debug output, 0 otherwise.
-REG_DEBUG_FLAG = 0
+REG_DEBUG_FLAG = 1
