Added 'install' option and STEER_LDFLAGS.

--- a/examples/mini_app/Makefile
+++ b/examples/mini_app/Makefile
@@ -45,9 +45,10 @@ TARGET   = mini_app
 
 ${TARGET}: ${TARGET}.o
 	${CC} ${C_FLAGS} ${TARGET}.o -o $@ ${STEER_LIBS} ${GLOBUS_LDFLAGS} \
-        -lReG_Steer -lm -lxml2 ${GLOBUS_PKG_LIBS}
-	mv ${TARGET} ${LOCAL_BIN_DIR}/.
+        -lReG_Steer ${STEER_LDFLAGS} -lxml2 ${GLOBUS_PKG_LIBS}
 
+install:
+	mv ${TARGET} ${LOCAL_BIN_DIR}/.
 clean:
 	rm -f *.o *~ core ${TARGET}
 
