--- a/examples/mini_app_f90/Makefile
+++ b/examples/mini_app_f90/Makefile
@@ -36,6 +36,7 @@
 #-----------------------------------------------------------------
 
 include ../../Makefile.include
+include ../../make/Makefile.${ARCH}
 
 # G and NBIT are passed to make on cmd line
 
