--- a/src/Makefile
+++ b/src/Makefile
@@ -36,6 +36,7 @@
 #------------------------------------------------------------------------
 
 include ../Makefile.include
+include ../make/Makefile.${ARCH}
 
 # Set-up access to M4 scripts for production of F90 wrappers, this is
 # taken from the PVM project.
