Moved -lxml2 linker flag to the new Makefile.ARCH files...

--- a/examples/mini_app/Makefile
+++ b/examples/mini_app/Makefile
@@ -46,7 +46,7 @@ TARGET   = mini_app
 
 ${TARGET}: ${TARGET}.o
 	${CC} ${C_FLAGS} ${TARGET}.o -o $@ ${STEER_LIBS} ${GLOBUS_LDFLAGS} \
-        -lReG_Steer ${STEER_LDFLAGS} -lxml2 ${GLOBUS_PKG_LIBS}
+        -lReG_Steer ${STEER_LDFLAGS} ${GLOBUS_PKG_LIBS}
 
 install:
 	mv ${TARGET} ${LOCAL_BIN_DIR}/.
