--- a/make/Makefile.DARWIN
+++ b/make/Makefile.DARWIN
@@ -65,4 +65,4 @@ STEER_LIBS = -L${REG_STEER_HOME}/lib${NBIT} \
              -L${REG_XML_LIBDIR}
 
 # Libraries to link example applications against
-STEER_LDFLAGS = -lm -lz
+STEER_LDFLAGS = -lm -lz -lxml2
