--- a/make/Makefile.SP2MPI
+++ b/make/Makefile.SP2MPI
@@ -65,4 +65,4 @@ STEER_LIBS = -L${REG_STEER_HOME}/lib${NBIT} \
              -L${REG_XML_LIBDIR}${NBIT}
 
 # Libraries to link example applications against
-STEER_LDFLAGS = -lm -liconv
+STEER_LDFLAGS = -lm -liconv -lxml2
