--- a/make/Makefile.SGI64
+++ b/make/Makefile.SGI64
@@ -65,4 +65,4 @@ STEER_LIBS = -L${REG_STEER_HOME}/lib${NBIT} \
              -L${REG_XML_LIBDIR}${NBIT}
 
 # Libraries to link example applications against
-STEER_LDFLAGS = 
+STEER_LDFLAGS = -lxml2
