Change to ar flags... now rvs...

--- a/make/Makefile.DARWIN
+++ b/make/Makefile.DARWIN
@@ -1,4 +1,4 @@
-#    Include file for Linux specific configuration.
+#    Include file for MacOS X specific configuration.
 #
 #    (C)Copyright 2002 The University of Manchester, United Kingdom,
 #    all rights reserved.
