Added '-' to Makefile commands so errors caused by missing f90 compiler are ignored rather than causing the build process to abort.

--- a/examples/sink/Makefile
+++ b/examples/sink/Makefile
@@ -49,7 +49,7 @@ ${TARGET}: ${TARGET}.o
         -lReG_Steer ${STEER_LDFLAGS} ${GLOBUS_PKG_LIBS}
 
 install:
-	mv ${TARGET} ${LOCAL_BIN_DIR}/.
+	-mv ${TARGET} ${LOCAL_BIN_DIR}/.
 
 clean:
 	rm -f *.o *~ core ${TARGET}
