Removed all globus-related code.

--- a/Makefile.include
+++ b/Makefile.include
@@ -54,21 +54,17 @@ LOCAL_BIN_DIR  = ${HOME}/bin
 REG_SOAP_STEERING_FLAG = 0
 
 #------------------------------------
-# Medium to use for data set transfer - you have a choice of globus_io,
-# tcp socket or files.  Setting both of the flags below to zero means
+# Medium to use for data set transfer - you have a choice of 
+# tcp socket or files.  Setting the flag below to zero means
 # that data transfer will use files (written to either the current working
-# directory or to that specified by REG_DATA_DIRECTORY if set). DO NOT 
-# set both of these flags to 1!
-
-# Set flag to 1 to use globus for iotype samples communication, 0 to not 
-REG_GLOBUS_SAMPLES_FLAG = 0
+# directory or to that specified by REG_DATA_DIRECTORY if set).
 
 # Set flag to 1 to use sockets for iotype samples communication, 0 to not 
 REG_SOCKET_SAMPLES_FLAG = 0
 
 #------------------------------------
 # Set flag to 1 to get (a lot of) debug output, 0 otherwise.
-REG_DEBUG_FLAG = 1
+REG_DEBUG_FLAG = 0
 
 #--------------------------------------------------------------------
 # Don't edit anything below this line
