--- a/src/Makefile
+++ b/src/Makefile
@@ -42,7 +42,7 @@ include ../make/Makefile.${ARCH}
 # taken from the PVM project.
 M4FILE = conf/${ARCH}.m4
 
-INCLUDE_PATH   = ${STEER_INCLUDES} ${GLOBUS_INCLUDES}
+INCLUDE_PATH   = ${STEER_INCLUDES}
 LIB_PATH       = ${REG_STEER_HOME}/lib$(NBIT)
 
 all:
@@ -52,7 +52,7 @@ lib:
 	make ${LIB_PATH}/libReG_Steer.a
 
 .c.o:
-	${CC} ${C_FLAGS} -DREG_GLOBUS_SAMPLES=${REG_GLOBUS_SAMPLES_FLAG} \
+	${CC} ${C_FLAGS} \
         -DREG_SOCKET_SAMPLES=${REG_SOCKET_SAMPLES_FLAG} \
         -DREG_SOAP_STEERING=${REG_SOAP_STEERING_FLAG} \
         -DREG_DEBUG=${REG_DEBUG_FLAG} \
@@ -65,7 +65,6 @@ ${LIB_PATH}/libReG_Steer.a: ReG_Steer_Appside_f.o \
 	ReG_Steer_Common.o \
 	ReG_Steer_Proxy_utils.o \
 	ReG_Steer_XML.o \
-	ReG_Steer_Appside_Globus.o \
 	ReG_Steer_Appside_Sockets.o \
         ReG_Steer_Steerside_Soap.o \
         ReG_Steer_Appside_Soap.o \
@@ -80,7 +79,6 @@ ${LIB_PATH}/libReG_Steer.a:
 	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a ReG_Steer_Common.o
 	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a ReG_Steer_Proxy_utils.o
 	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a ReG_Steer_XML.o
-	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a ReG_Steer_Appside_Globus.o
 	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a ReG_Steer_Appside_Sockets.o
 	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a ReG_Steer_Appside_Soap.o
 	${AR} ${AR_FLAGS} ${LIB_PATH}/libReG_Steer.a ReG_Steer_Appside_File.o
@@ -96,7 +94,6 @@ ReG_Steer_Appside.o: ReG_Steer_Appside.c \
 	 ../include/ReG_Steer_types.h \
 	 ../include/ReG_Steer_Appside_internal.h \
 	 ../include/ReG_Steer_Common.h \
-	 ../include/ReG_Steer_Appside_Globus.h \
 	 ../include/ReG_Steer_Appside_Sockets.h \
          ../include/ReG_Steer_Appside_Soap.h \
          ../include/ReG_Steer_Appside_File.h
@@ -110,7 +107,6 @@ ReG_Steer_Steerside.o: ReG_Steer_Steerside.c \
 	 ../include/ReG_Steer_types.h \
 	 ../include/ReG_Steer_Steerside_internal.h \
 	 ../include/ReG_Steer_Common.h \
-	 ../include/ReG_Steer_Appside_Globus.h \
 	 ../include/ReG_Steer_Steerside_Soap.h
 
 ReG_Steer_Common.o: ReG_Steer_Common.c \
@@ -130,15 +126,10 @@ ReG_Steer_Appside_f.o: ReG_Steer_Appside_f.c \
          ../include/ReG_Steer_Appside.h \
 	 ../include/ReG_Steer_types.h \
 	 ../include/ReG_Steer_Common.h \
-	 ../include/ReG_Steer_Appside_Globus.h \
 	 ../include/ReG_Steer_Appside_Sockets.h
 
 ReG_Steer_XML.o: ReG_Steer_XML.c \
 	../include/ReG_Steer_XML.h \
-	../include/ReG_Steer_types.h
-
-ReG_Steer_Appside_Globus.o: ReG_Steer_Appside_Globus.c \
-	../include/ReG_Steer_Appside_Globus.h \
 	../include/ReG_Steer_types.h
 
 ReG_Steer_Appside_Sockets.o: ReG_Steer_Appside_Sockets.c \
@@ -178,5 +169,5 @@ clean:
 tidy:
 	rm -f ReG_Steer_Steerside.o ReG_Steer_Appside.o \
         ReG_Steer_Appside_Sockets.o ReG_Steer_Appside_Soap.o \
-        ReG_Steer_Appside_File.o ReG_Steer_Appside_Globus.o \
+        ReG_Steer_Appside_File.o \
 	ReG_Steer_Common.o ReG_Steer_Appside_f.o ReG_Steer_Appside_f.c *~
