--- a/examples/mini_app_f90_parallel/Makefile
+++ b/examples/mini_app_f90_parallel/Makefile
@@ -40,7 +40,7 @@ TARGET   = mini_app_para
 ${TARGET}: ${TARGET}.o ../../include/reg_steer_f90.inc \
 ${REG_STEER_HOME}/lib$(NBIT)/libReG_Steer.a
 	-${F90} ${F90_FLAGS} ${TARGET}.o -o $@ ${STEER_LIBS} ${GLOBUS_LDFLAGS} \
-	-lmpi -lReG_Steer ${STEER_LDFLAGS} ${GLOBUS_PKG_LIBS} 
+	${MPI_FLAG} -lReG_Steer ${STEER_LDFLAGS} ${GLOBUS_PKG_LIBS} 
 
 mini_app_para.o: mini_app_para.f90
 	-${F90} ${F90_FLAGS} ${STEER_INCLUDES} ${GLOBUS_INCLUDES} -c mini_app_para.f90 -o $@
