--- a/Makefile.include
+++ b/Makefile.include
@@ -36,7 +36,7 @@
 # if there is not a corresponding Makefile.<ARCH> file in the make
 # directory, feel free to add one. It just means we haven't tested
 # on that platform yet!
-ARCH = LINUX
+ARCH = LINUX-Intel
 
 # Directory to install executables to (mini_app, mini_steerer etc.)
 LOCAL_BIN_DIR  = ${HOME}/bin
@@ -45,7 +45,7 @@ LOCAL_BIN_DIR  = ${HOME}/bin
 # Medium to use for steering communication - you have a choice of
 # files or SOAP over http.
 # Set flag to 1 to use SOAP for steering communication, 0 to use files 
-REG_SOAP_STEERING_FLAG = 0
+REG_SOAP_STEERING_FLAG = 1
 
 #------------------------------------
 # Medium to use for data set transfer - you have a choice of 
@@ -54,7 +54,7 @@ REG_SOAP_STEERING_FLAG = 0
 # directory or to that specified by REG_DATA_DIRECTORY if set).
 
 # Set flag to 1 to use sockets for iotype samples communication, 0 to not 
-REG_SOCKET_SAMPLES_FLAG = 0
+REG_SOCKET_SAMPLES_FLAG = 1
 
 #------------------------------------
 # Set flag to 1 to get (a lot of) debug output, 0 otherwise.
