--- a/Makefile.include
+++ b/Makefile.include
@@ -36,10 +36,10 @@
 # if there is not a corresponding Makefile.<ARCH> file in the make
 # directory, feel free to add one. It just means we haven't tested
 # on that platform yet!
-ARCH = LINUX-Intel
+ARCH = LINUX
 
 # Directory to install executables to (mini_app, mini_steerer etc.)
-LOCAL_BIN_DIR  = ${HOME}/bin
+LOCAL_BIN_DIR  = ${HOME}/RealityGrid/bin
 
 #------------------------------------
 # Medium to use for steering communication - you have a choice of
