--- a/make/Makefile.ALTIX
+++ b/make/Makefile.ALTIX
@@ -41,6 +41,7 @@ C_FLAGS = -O2
 # Location of F90 compiler (if any) and flags to use
 F90 = efc
 F90_FLAGS = -O2
+MPI_FLAG = -lmpi
 
 # Location of java compiler - used to produce proxy binary
 JAVAC = /usr/java/j2sdk1.4.2_03/bin/javac
