--- a/make/Makefile.SGI64
+++ b/make/Makefile.SGI64
@@ -41,6 +41,7 @@ C_FLAGS = -O2 -64
 # Location of F90 compiler (if any) and flags to use
 F90 = f90
 F90_FLAGS = -O2 -64
+MPI_FLAG = -lmpi
 
 # Location of java compiler - used to produce proxy binary
 JAVAC          = /usr/java2/bin/javac
