--- a/make/Makefile.SP2MPI
+++ b/make/Makefile.SP2MPI
@@ -43,6 +43,7 @@ C_FLAGS = -O2 -q64 -bdynamic
 # Location of F90 compiler (if any) and flags to use
 F90 = mpxlf90_r
 F90_FLAGS = -O2 -qsuffix=f=f90:cpp=f90 -q64
+MPI_FLAG = -lmpi
 
 # Location of java compiler - used to produce proxy binary
 JAVAC          = /usr/bin/javac
