--- a/make/Makefile.DARWIN
+++ b/make/Makefile.DARWIN
@@ -40,8 +40,9 @@ C_FLAGS = -O2
 
 # Location of F90 compiler (if any) and flags to use
 F90 = 
+F90_MPI = 
 F90_FLAGS = 
-MPI_FLAG = 
+MPI_FLAGs = 
 
 # Location of java compiler - used to produce proxy binary
 JAVAC          = /usr/bin/javac
