--- a/make/Makefile.SP2MPI
+++ b/make/Makefile.SP2MPI
@@ -42,8 +42,9 @@ C_FLAGS = -O2 -q64 -bdynamic
 
 # Location of F90 compiler (if any) and flags to use
 F90 = mpxlf90_r
+F90_MPI = mpxlf90_r
 F90_FLAGS = -O2 -qsuffix=f=f90:cpp=f90 -q64
-MPI_FLAG = -lmpi
+MPI_FLAGS = -lmpi
 
 # Location of java compiler - used to produce proxy binary
 JAVAC          = /usr/bin/javac
